@@ -6,6 +6,7 @@ import com.example.mydrinkshop.domain.Stoc;
 import com.example.mydrinkshop.repository.Repository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class StocService {
 
@@ -61,7 +62,7 @@ public class StocService {
 
             List<Stoc> ingredienteStoc = stocRepo.findAll().stream()
                     .filter(s -> s.getIngredient().equalsIgnoreCase(ingredient))
-                    .toList();
+                    .collect(Collectors.toList());
 
             double ramas = necesar;
 
